# chat-agent-template

./: .env.example  .gitignore  Makefile  README.md
api/: README.md  pyproject.toml
api/app/: config.py  main.py
api/app/agent/: README.md  __init__.py  loop.py  prompts.py
api/app/agent/tools/: __init__.py  fs.py  meetings.py  notion.py
api/app/routes/: agent.py
web/: index.html  package.json  tsconfig.json
web/src/: App.tsx  index.css  main.tsx
web/src/components/agent/: AgentChat.tsx  README.md  ToolCallCard.tsx  agent-client.ts
